--- a/Robust/RobustDemo/app/build.gradle
+++ b/Robust/RobustDemo/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'auto-patch-plugin'
+apply plugin: 'auto-patch-plugin'
 apply plugin: 'robust'
 
 android {
@@ -15,7 +15,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
